# convent

./: .gitignore  .replit  LICENSE  README.md  cabal.project  cabal.project.freeze  config  convent.cabal  new-project.cabal  replit.nix
.github/workflows/: ci.yml  memory-profile.yml
app/: Main.hs  Watch.hs
app/Web/Convent/Events/: MessageSubmittedEvent.hs  ParticipantEvent.hs  ParticipantJoinedEvent.hs  ParticipantLeftEvent.hs
app/Web/Convent/Storage/: EventStore.hs  EventsPage.hs  IndexPage.hs  Utils.hs
app/Web/Convent/Util/: ByteString.hs
lib/Web/Convent/: API.hs  Auth.hs  Error.hs
lib/Web/Convent/Events/: MessageSubmittedEvent.hs  ParticipantJoinedEvent.hs  ParticipantLeftEvent.hs
lib/Web/Convent/Storage/: ChatDataOps.hs  ChatFileOps.hs  ChatStore.hs  EventStore.hs  EventsPage.hs  FilePage.hs  IndexPage.hs  PageOps.hs
lib/Web/Convent/Util/: ByteString.hs
lode/: ai.md  event-storage.md  events.md  overview.md
test/: Spec.hs
test/Web/Convent/: APISpec.hs  AuthSpec.hs
test/Web/Convent/Events/: ChatFlowSpec.hs  MessageSubmittedEventSpec.hs  ParticipantEventSpec.hs  ParticipantJoinedEventSpec.hs  ParticipantLeftEventSpec.hs
test/Web/Convent/Storage/: EventStoreSpec.hs  EventsPageSpec.hs  FilePageSpec.hs  IndexPageSpec.hs
