cabal-version:      3.4
name:               convent
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license:            MIT
license-file:       LICENSE
-- The package author(s).
author:             Barnaba Piotrowski <barnaba.piotrowski@gmail.com>
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         
-- A copyright notice.
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    hs-source-dirs:   lib
    exposed-modules:  Web.Convent.Storage.EventStore
                    , Web.Convent.Error
                    , Web.Convent.Storage.EventsPage
                    , Web.Convent.Storage.FilePage
                    , Web.Convent.Storage.PageOps
                    , Web.Convent.Storage.IndexPage
                    , Web.Convent.Storage.ChatStore        
                    , Web.Convent.Util.ByteString
                    , Web.Convent.Events.ParticipantJoinedEvent
                    , Web.Convent.Events.ParticipantLeftEvent
                    , Web.Convent.Events.MessageSubmittedEvent
    build-depends:    base < 4.19 && >= 4.18.2.1
                    , bytestring == 0.12.1.0
                    , text == 2.1.1
                    , transformers == 0.6.1.1
                    , containers  == 0.7
                    , uuid == 1.3.15
    default-language: GHC2021

executable convent-exe
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base < 4.19 && >= 4.18.2.1
                    , convent
    hs-source-dirs:   app
    default-language: GHC2021

test-suite convent-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Web.Convent.Storage.EventStoreSpec
                    , Web.Convent.Storage.EventsPageSpec
                    , Web.Convent.Storage.FilePageSpec
                    , Web.Convent.Storage.IndexPageSpec
                    , Web.Convent.Events.ParticipantJoinedEventSpec
                    , Web.Convent.Events.ParticipantLeftEventSpec
                    , Web.Convent.Events.MessageSubmittedEventSpec
    hs-source-dirs:   test
    build-depends:    convent
                    , base < 4.19 && >= 4.18.2.1
                    , bytestring == 0.12.1.0
                    , text == 2.1.1
                    , hspec == 2.11.8
                    , temporary == 1.3
                    , directory == 1.3.8.4
    default-language: GHC2021